renaming project to teleport

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "require-js",
+    "name": "teleport",
     "description": "CommonJS modules 1.0 loader for browsers.",
     "version": "0.1",
     "keywords": ["commonjs", "modules", "require"],
@@ -17,14 +17,14 @@
             "web": "http://rfobic.wordpress.com/"
         }
     ],
-    "bugs": { "web": "http://github.com/Gozala/require-js/issues/" },
+    "bugs": { "web": "http://github.com/Gozala/teleport/issues/" },
     "licenses": [
         { "type": "GPL" }
     ],
     "repositories": [
         {
             "type": "git",
-            "url": "git://github.com/Gozala/require-js.git",
+            "url": "git://github.com/Gozala/teleport.git",
         }
     ],
     "directories": {
