Reorginizing teleport to support both teleport and node engines.

--- a/package.json
+++ b/package.json
@@ -10,23 +10,37 @@
   , "url": "git://github.com/Gozala/teleport.git"
   }
 , "bugs": { "web": "http://github.com/Gozala/teleport/issues/" }
-, "directories":
-  { "doc": "./docs"
-  , "man": "./man"
-  , "lib": "./lib"
-  , "test": "./test"
+, "overlay":
+  { "node":
+    { "dependencies":
+      { "test": ">=0.0.8"
+      , "system": ">=0.0.1"
+      , "q": ">=0.1.0"
+      , "promised-fs": ">=0.0.3"
+      , "promised-utils": ">=0.0.2"
+      }
+    , "directories":
+      { "lib": "./engines/node"
+      , "test": "./test"
+      }
+    }
+  , "teleport":
+    { "dependencies":
+      { "backbone": ">=0.1.0"
+      , "mustache": ">=0.3.0"
+      , "markdown-js": ">=0.0.3"
+      , "promised-http": ">=0.0.1"
+      , "q": ">=0.1.0"
+      }
+    , "directories": { "lib": "./engines/teleport" }
+    }
   }
-, "dependencies":
-  { "test": ">=0.0.8"
-  , "system": ">=0.0.1"
-  , "q": ">=0.1.0"
-  , "promised-fs": ">=0.0.3"
-  , "promised-utils": ">=0.0.2"
-  }
-, "main": "./lib/teleport.js"
-, "bin" : { "teleport" : "./lib/commands/commands.js" }
+, "bin" : { "teleport" : "./engines/node/commands/commands.js" }
 , "scripts": { "test": "node test/all.js" }
-, "engines": { "node": ">=0.1.103" }
+, "engines":
+  { "node": ">=0.1.103"
+  , "teleport": ">=0.2.0"
+  }
 , "licenses" :
   [ { "type" : "MPL 1.1/LGPL 2.1/GPL 2.0"
     , "url" : "http://www.mozilla.org/MPL/"
