Adding main module to a teleport on teleport engine.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       , "promised-http": ">=0.0.2"
       , "q": ">=0.1.5"
       }
+    , "main": "./engines/teleport/teleport.js"
     , "directories": { "lib": "./engines/teleport" }
     }
   }
