--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
       , "system": ">=0.0.4"
       , "q": ">=0.1.5"
       , "promised-fs": ">=0.0.7"
-      , "promised-utils": ">=0.0.6"
+      , "promised-utils": ">=0.0.7"
+      , "markdown-js": ">=0.0.3"
+      , "promised-http": ">=0.0.2"
+      , "mustache": ">=0.3.0"
+      , "backbone": ">=0.3.3"
       }
     , "directories":
       { "lib": "./engines/node"
