Factoring out package utility functions to a shared module and adding tests to it.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 , "bugs": { "web": "http://github.com/Gozala/teleport/issues/" }
 , "modules":
   { "utils/module": "./engines/common/utils/module"
+  , "utils/package": "./engines/common/utils/package"
   }
 , "overlay":
   { "node":
