Swapping local mime module with an external dependency.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   }
 , "dependencies":
   { "test": ">=0.0.10"
+  , "mime": ">=1.2.1"
   , "system": ">=0.0.4"
   , "q": ">=0.2.5"
   , "promised-fs": ">=0.0.8"
