--- a/package.json
+++ b/package.json
@@ -1,47 +1,30 @@
-{ "name": "teleport"
-, "version": "0.2.2"
-, "description": "CommonJS modules 1.0 loader for browsers."
-, "homepage": "http://github.com/Gozala/teleport/"
-, "keywords": ["commonjs", "modules", "require"]
-, "contributors":
-  [ "Irakli Gozalishvili <rfobic@gmail.com> (http://jeditoolkit.com)" ]
-, "repository":
-  { "type": "git"
-  , "url": "git://github.com/Gozala/teleport.git"
-  }
-, "bugs": { "web": "http://github.com/Gozala/teleport/issues/" }
-, "overlay":
-  { "node":
-    { "dependencies":
-      { "test": ">=0.0.10"
-      , "system": ">=0.0.4"
-      , "q": ">=0.1.0"
-      , "promised-fs": ">=0.0.6"
-      , "promised-utils": ">=0.0.3"
-      }
-    , "directories":
-      { "lib": "./engines/node"
-      , "test": "./test"
-      }
-    }
-  , "teleport":
-    { "dependencies":
-      { "markdown-js": ">=0.0.3"
-      , "promised-http": ">=0.0.2"
-      , "q": ">=0.1.5"
-      }
-    , "directories": { "lib": "./engines/teleport" }
-    }
-  }
-, "bin" : { "teleport" : "./engines/node/commands/commands.js" }
-, "scripts": { "test": "node test/all.js" }
-, "engines":
-  { "node": ">=0.1.103"
-  , "teleport": ">=0.2.0"
-  }
-, "licenses" :
-  [ { "type" : "MPL 1.1/LGPL 2.1/GPL 2.0"
-    , "url" : "http://www.mozilla.org/MPL/"
+{ "name": "teleport-site",
+  "version": "0.1.0",
+  "description": "Teleport site.",
+  "homepage": "http://jeditoolkit.com/teleport",
+  "keywords": ["teleport"],
+  "contributors": [
+    "Irakli Gozalishvili <rfobic@gmail.com> (http://jeditoolkit.com)"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Gozala/teleport.git"
+  },
+  "dependencies": {
+    "markdown-js": ">=0.0.3",
+    "promised-http": ">=0.0.2",
+    "q": ">=0.1.5",
+    "teleport": ">= 0.2.10"
+  },
+  "bugs": { "web": "http://github.com/Gozala/teleport/issues/" },
+  "engines": {
+    "node": ">=0.1.103",
+    "teleport": ">=0.2.0"
+  },
+  "licenses": [
+    {
+      "type" : "MPL 1.1/LGPL 2.1/GPL 2.0",
+      "url" : "http://www.mozilla.org/MPL/"
     }
   ]
 }
